# python_datapack

./: .gitignore  1_upgrades.py  2_build.py  3_upload.py  README.md  TODO.md  all_in_one.py  build_all_in_one.py  copy_in_local.py  github_release.py  pyproject.toml  upgrade.py
.github/workflows/: on_bookshelf_release.yml  tick.yml
.github/workflows/bookshelf/: on_release.yml
scripts/: check_bookshelf_version.py  on_bookshelf_release.py
src/python_datapack/: __init__.py  __memory__.py  constants.py  debug_info.py  enhance_config.py  example.py  finalyze.py  initialize.py  verify_database.py  watcher.py
src/python_datapack/compatibilities/: main.py  neo_enchant.py  simpledrawer.py
src/python_datapack/continuous_delivery/: __init__.py  cd_utils.py  credentials_utils.py  github.py  modrinth.py  pmc.py  smithed.py
src/python_datapack/datapack/: basic_structure.py  custom_block_ticks.py  custom_blocks.py  headers.py  lang.py  loading.py  loot_tables.py  main.py  recipes.py
src/python_datapack/dependencies/: bookshelf.py  bookshelf_config.json  main.py
src/python_datapack/manual/: book_components.py  book_optimizer.py  craft_content.py  image_utils.py  iso_renders.py  main.py  other_utils.py  page_font.py  shared_import.py  text_components.py  utils.py
src/python_datapack/resource_pack/: check_unused_textures.py  item_models.py  main.py  power_of_2.py  sounds.py  source_lore_font.py  vanilla_models.py
src/python_datapack/utils/: archive.py  cache.py  custom_block_ticks.py  database_helper.py  ingredients.py  io.py  multiprocessing.py  print.py  weld.py
src/python_datapack/utils/io/: __generate_writers_and_readers.py  __init__.py  _readers.py  _writers.py  delete.py  deprecated.py  general.py  read.py  write.py
