
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python_datapack"
version = "1.21.6.2"
authors = [
	{ name="Stoupy51", email="stoupy51@gmail.com" },
]
description = "Python package to help generating advanced Minecraft datapack contents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]
dependencies = [
	"requests>=2.32.0",
	"pillow>=10.4.0",
	"smithed>=0.19.0",
	"model_resolver==1.3.0",
	"mutagen>=1.47.0",
	"watchdog>=3.0.0",
	"pyperclip>=1.8.2",
	"stouputils>=1.3.3"
]

[project.urls]
Homepage = "https://github.com/Stoupy51/python_datapack"
Issues = "https://github.com/Stoupy51/python_datapack/issues"

[tool.pyright]
typeCheckingMode = "basic"

[tool.setuptools]
license-files = ["LICENSE"]

